# fk_with_nn

./: .gitignore  CMakeLists.txt  README.md  package.xml
euslisp/: arm-robot.l  move-endcoords.l  move-middlecoords.l  output-fk.l  random-fk.l
models/: goodmymodel.h5  mymodel.h5
scripts/: learn-fks.py
srv/: EE_pos.srv  Fk.srv  Ik.srv
